# ProtoFX

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  developer.agent.md  planner.agent.md  reviewer.agent.md
.github/workflows/: ci.yml
docs/: README.md  ROADMAP.md  WORKBOARD.md
docs/adr/: 0001-thin-graph-owned-ir.md  0002-documentation-system.md  0003-milestone-1-ir-contract-reconciliation.md  0004-externalized-reference-model-validation-assets.md  0005-downstream-tooling-validation-boundary.md  0006-coverage-visibility-support-matrix.md  0007-agent-facing-documentation-entrypoint-and-summary.md  0008-control-flow-subgraphs-and-if-mvp.md  0009-loop-loop-carried-state-and-while-loop-lowering.md  0010-scan-mvp-state-scanned-output-and-while-loop-lowering.md  0011-symbolic-shape-propagation-pipeline-and-validation-boundary.md  README.md  TEMPLATE.md
docs/dev/: ARCHITECTURE.md  DOWNSTREAM_VALIDATION.md  IR.md  MODEL_VALIDATION.md  OPSET_COMPATIBILITY.md  PUBLIC_API.md  SUPPORT_MATRIX.md  TEMPLATE.md
docs/src/: README.md  emitters.md  importers.md  ir.md  ops.md
docs/status/: OPSET_COMPATIBILITY.md  SUPPORT_MATRIX.md  SYMBOLIC_SHAPE_PROPAGATION.md  TEMPLATE.md
scripts/: clip_dry_run.py  gen_opset_matrix.py
src/protofx/: __init__.py
tests/: conftest.py
tests/downstream/: __init__.py  conftest.py  test_compile_models.py  test_compile_smoke.py  test_export_smoke.py  test_fx_pass_smoke.py  test_quantization_models.py  test_quantization_smoke.py
tests/emitter/: __init__.py  test_e2e_smoke.py  test_emit_graph.py  test_value_kind_emission.py
tests/importer/: __init__.py  test_onnx_importer.py
tests/ir/: test_derived_shape.py  test_dim.py  test_dtype.py  test_graph.py  test_node.py  (+4 more)
(+91 files in other folders)
