[project]
name = "protofx"
version = "0.1.0"
description = "Convert ONNX models into PyTorch torch.fx.GraphModule objects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length — enforced by ruff format, not lint
]

[tool.ruff.lint.isort]
known-first-party = ["protofx"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
