[project]
name = "protofx"
version = "0.1.0"
description = "Convert ONNX models into PyTorch torch.fx.GraphModule objects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.16",
    "torch>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length — enforced by ruff format, not lint
]

[tool.ruff.lint.isort]
known-first-party = ["protofx"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
]
